--- a/frontend/management/templates/facility/facility.html
+++ b/frontend/management/templates/facility/facility.html
@@ -10,7 +10,7 @@
                 <a href="{% url 'view_ob' %}" class="list-group-item list-group-item-action " id="viewFacilities">Office Building</a>
                 <a href="{% url 'view_ops' %}" class="list-group-item list-group-item-action " id="viewFacilities">Outpatient Surgery</a>
                 <a href="{% url 'create_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Add Facility</a>
-                <a href="{% url 'view_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Edit Facility</a>  
+                <a href="{% url 'edit_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Edit Facility</a>  
             </div>
         </div>        
         <div class="col-md-10">
