Insurance Company Final Fixes

--- a/frontend/management/templates/insurance/add_insurance.html
+++ b/frontend/management/templates/insurance/add_insurance.html
@@ -6,9 +6,9 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="{% url 'view_insurance' %}" class="list-group-item list-group-item-action active-tab" id="viewInsurance">All Insurance Companies</a> 
-                <a href="{% url 'add_insurance' %}" class="list-group-item list-group-item-action active-tab" id="addInsurance">Add Insurance Company</a>
-                <a href="{% url 'edit_insurance' %}" class="list-group-item list-group-item-action active-tab" id="editInsurance">Edit a Company</a> 
+                <a href="{% url 'view_insurance' %}" class="list-group-item list-group-item-action " id="viewInsurance">All Insurance Companies</a> 
+                <a href="{% url 'add_insurance' %}" class="list-group-item list-group-item-action active-tab" id="addInsurance">Add a Company</a>
+                <a href="{% url 'edit_insurance' %}" class="list-group-item list-group-item-action " id="editInsurance">Edit a Company</a> 
             </div>
         </div>        
         <div class="col-md-10">
