--- a/frontend/management/templates/navBar.html
+++ b/frontend/management/templates/navBar.html
@@ -6,8 +6,8 @@
         <li class="horizontal-nav-li" id="homeTab"><a href="{% url 'index' %}" class="{% if request.path == '/' %}active{% endif %}">Home</a></li>
         <li class="horizontal-nav-li" id="employeeTab"><a href="{% url 'view_employee' %}" class="{%  if '/emp/' in request.path  %}active{% endif %}">Employee</a></li>
         <li class="horizontal-nav-li" id="facilityTab"><a href="{% url 'view_facility' %}" class="{% if '/facility/' in request.path %}active{% endif %}">Facility</a></li>
-        <li class="horizontal-nav-li" id="insuranceTab"><a href="{% url 'view_insurance' %}" class="{% if request.path == '/insurance/' %}active{% endif %}">Insurance</a></li>
+        <li class="horizontal-nav-li" id="insuranceTab"><a href="{% url 'view_insurance' %}" class="{% if '/insurance/' in request.path %}active{% endif %}">Insurance</a></li>
         <li class="horizontal-nav-li" id="patientTab"><a href="{% url 'view_patient' %}" class="{% if '/patient/' in request.path %}active{% endif %}">Patient</a>
-        <li class="horizontal-nav-li" id="reportsTab"><a href="#" class="{% if request.path == '/reports/' %}active{% endif %}">Reports</a></li>
+        <li class="horizontal-nav-li" id="reportsTab"><a href="#" class="{% if '/reports/' in request.path %}active{% endif %}">Reports</a></li>
     </ul>
 </nav>
