--- a/frontend/management/templates/patient/patient.html
+++ b/frontend/management/templates/patient/patient.html
@@ -8,6 +8,7 @@
             <div class="list-group">
                 <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action active-tab" id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action" id="addPatient">Add Patient</a>
+                <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action" id="makeAppointment">Create Appointment</a>
             </div>
         </div>
         <div class="col-md-10">
