--- a/frontend/management/templates/reports/reports1.html
+++ b/frontend/management/templates/reports/reports1.html
@@ -37,7 +37,7 @@
                         <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
                     </div></div></form></center>
                     <br>
-                    {% if revenue_by_facility %}
+                    {% if selected_date %}
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
