--- a/frontend/management/templates/reports/reports2.html
+++ b/frontend/management/templates/reports/reports2.html
@@ -19,162 +19,82 @@
                     <div class="col-md-12">
                         <div class="card mt-8">
                             <div class="card-body">
-                                <center><h5>Edit Employee</h5></center>
+                                <center><h5>Doctor's Appointment List</h5></center>
                                 <br><center>
-                                <form action="{% url 'edit_employee' %}" method="GET">
+                                <form action="{% url 'view_report2' %}" method="GET">
                                 <div class = "row" style="justify-content: center">
                                 
                                 <div class="col-md-4">
-                                    <select id="employeeIdDropdown" name="employeeIdDropdown" class="form-control">
-                                        <option value="" disabled {% if not employee_details %}selected{% endif %}>Select Employee ID</option>
+                                    <select class="form-control" id="physician_id" name="physician_id" required>
+                                        <option value="" disabled {% if not physician_id %}selected{% endif %}>Select</option>
                                         {% for employee in employees %}
-                                            <option value="{{ employee.EmployeeID }}" {% if employee_details and employee.EmployeeID == employee_details.EmployeeID %}selected{% endif %}>{{ employee.EmployeeID }}</option>
+                                            <option value="{{ employee.EmployeeID }}" {% if employee.EmployeeID|stringformat:"s" == physician_id %}selected{% endif %}>{{ employee.EmployeeID }}</option>
                                         {% endfor %}
                                     </select>
                                     
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <input type="date" class="form-control" id="selected_date" name="selected_date" value="{% if selected_date %}{{selected_date}}{% endif %}" required>
+                                    </div>
                                 </div>
                                 
                                 <div class="col-md-2">
                                     <button id="editBtn" type="submit" class="btn btn-secondary" >FIND</button>
                                 </div></div></form></center>
                                 <br>
-                                {% if employee_details %}
-                                <form action="{% url 'edit_employee' %}" method="POST">
-                                    <input type="text" name="employee_id" value="{{ employee_details.EmployeeID }}" hidden>
-                                    {% csrf_token %}
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="ssn">SSN:</label>
-                                                <input type="text" class="form-control" id="ssn" name="ssn" value="{{ employee_details.SSN }}"required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="first_name">First Name:</label>
-                                                <input type="text" class="form-control" id="first_name" name="first_name" value="{{ employee_details.FirstName }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="middle_name">Middle Name:</label>
-                                                <input type="text" class="form-control" id="middle_name" name="middle_name" value="{{ employee_details.MiddleName }}" >
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="last_name">Last Name:</label>
-                                                <input type="text" class="form-control" id="last_name" name="last_name" value="{{ employee_details.LastName }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="street">Street:</label>
-                                                <input type="text" class="form-control" id="street" name="street" value="{{ employee_details.Street }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="city">City:</label>
-                                                <input type="text" class="form-control" id="city" name="city" value="{{ employee_details.City }}" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="state">State:</label>
-                                                <input type="text" class="form-control" id="state" name="state" value="{{ employee_details.State }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="zip">Zip:</label>
-                                                <input type="text" class="form-control" id="zip" name="zip" value="{{ employee_details.Zip }}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="salary">Salary:</label>
-                                                <input type="number" class="form-control" id="salary" name="salary" value="{{ employee_details.Salary }}" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="date_hired">Date Hired:</label>
-                                                <input type="date" class="form-control" id="date_hired" name="date_hired" value="{% if employee_details.Date_Hired %}{{ employee_details.Date_Hired|date:'Y-m-d' }}{% endif %}" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="job_class">Job Class:</label>
-                                                <select class="form-control" id="job_class" name="job_class" placeholder="Select" required onchange="toggleAdditionalFields(this)">
-                                                    <option value="" disabled {% if not employee_details.Job_Class %}selected{% endif %}>Select</option>
-                                                    <option value="Doctor" {% if employee_details.Job_Class == "Doctor" %}selected{% endif %}>Doctor</option>
-                                                    <option value="Nurse" {% if employee_details.Job_Class == "Nurse" %}selected{% endif %}>Nurse</option>
-                                                    <option value="HCP" {% if employee_details.Job_Class == "HCP" %}selected{% endif %}>HCP</option>
-                                                    <option value="Admin" {% if employee_details.Job_Class == "Admin" %}selected{% endif %}>Admin</option>
-                                                </select>
-                                                
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label for="facility_id">Facility ID:</label>
-                                                <select class="form-control" id="facility_id" name="facility_id" required>
-                                                    <option value="" disabled {% if not employee_details.Fac_ID %}selected{% endif %}>Select</option>
-                                                    {% for facility in facilities %}
-                                                        <option value="{{ facility.Facility_ID }}" {% if employee_details.Fac_ID == facility.Facility_ID %}selected{% endif %}>{{ facility.Facility_ID }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <center>
-                                        {% if employee_details %}
-                                        <!-- Additional Fields Based on Job Class -->
-                                        <div id="additional_fields_doctor" class="additional-fields col-md-9" style="display: none;">
-                                            <div class="row" style="justify-content: space-between">
-                                                <div class="form-group col-md-5">
-                                                    <label for="speciality">Speciality:</label>
-                                                    <input type="text" class="form-control" id="speciality" name="speciality" value="{% if employee_details.Job_Class == 'Doctor' %}{{ employee_details.Speciality }}{% endif %}">
-                                                </div>
-                                                <div class="form-group col-md-5">
-                                                    <label for="board_certification_date">Board Certification Date:</label>
-                                                    <input type="date" class="form-control" id="board_certification_date" name="board_certification_date" value="{% if employee_details.Job_Class == 'Doctor' %}{{ employee_details.Board_Certification_Date|date:'Y-m-d' }}{% endif %}">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div id="additional_fields_nurse" class="additional-fields col-md-4" style="display: none;">
-                                            <div class="form-group">
-                                                <label for="certification">Certification:</label>
-                                                <input type="text" class="form-control" id="certification" name="certification" value="{% if employee_details.Job_Class == 'Nurse' %}{{ employee_details.Certification }}{% endif %}">
-                                            </div>
-                                        </div>
-
-                                        <div id="additional_fields_hcp" class="additional-fields col-md-4" style="display: none;">
-                                            <div class="form-group">
-                                                <label for="practice_area">Practice Area:</label>
-                                                <input type="text" class="form-control" id="practice_area" name="practice_area" value="{% if employee_details.Job_Class == 'HCP' %}{{ employee_details.Practice_Area }}{% endif %}">
-                                            </div>
-                                        </div>
-
-                                        <div id="additional_fields_admin" class="additional-fields col-md-4" style="display: none;">
-                                            <div class="form-group">
-                                                <label for="job_title">Job Title:</label>
-                                                <input type="text" class="form-control" id="job_title" name="job_title" value="{% if employee_details.Job_Class == 'Admin' %}{{ employee_details.Job_Title }}{% endif %}">
-                                            </div>
-                                        </div>
-                                    {% endif %}
-                                    </center>
-
-                                    <center><button type="submit" class="btn btn-secondary">EDIT</button></center>
-                                </form>{% endif %}
+                                <br>
+                                {% if physician_id %}
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Facility ID</th>
+                                            <th>Patient ID</th>
+                                            <th>Patient Name</th>
+                                            <th>Date Time</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for f in appointments %}
+                                        <tr>
+                                            <td>{{ f.Fac_ID }}</td>
+                                            <td >{{ f.Pat_ID }}</td>
+                                            <td class="truncate-text">{{ f.Patient_FirstName }}, {{f.Patient_LastName}}</td>
+                                            <td>{{ f.Date_Time }}</td>
+                                        </tr>
+                                        {% empty %}
+                                        <tr>
+                                            <td colspan="8">No Appointments.</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>{%endif%}
+                            <!-- Pagination -->
+                            <ul class="pagination justify-content-center">
+                                {% if revenue_by_facility.has_previous %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page=1&selected_date={{ selected_date }}">&laquo; First</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ revenue_by_facility.previous_page_number }}&selected_date={{ selected_date }}">Previous</a>
+                                    </li>
+                                {% endif %}
+                                {% if revenue_by_facility%}
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#">Page {{ revenue_by_facility.number }} of {{ revenue_by_facility.paginator.num_pages }}</a>
+                                </li>
+                                {% endif %}
+                                {% if revenue_by_facility.has_next %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ revenue_by_facility.next_page_number }}&selected_date={{ selected_date }}">Next</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ revenue_by_facility.next_page_number|urlencode }}&selected_date={{ selected_date|urlencode }}">Last &raquo;</a>
+                                    </li>
+                                {% endif %}
+                               </ul>
                             </div>
                         </div>
                     </div>
@@ -183,22 +103,4 @@
         </div>
     </div>
 </div>
-<script>
-    // Function to toggle additional fields based on job class
-    function toggleAdditionalFields() {
-        var jobClass = document.getElementById("job_class").value;
-        if (jobClass) { // Check if job class has a value
-            var additionalFields = document.getElementsByClassName("additional-fields");
-            for (var i = 0; i < additionalFields.length; i++) {
-                additionalFields[i].style.display = "none";
-            }
-            var additionalFieldsToShow = document.getElementById("additional_fields_" + jobClass.toLowerCase());
-            if (additionalFieldsToShow) {
-                additionalFieldsToShow.style.display = "block";
-            }
-        }
-    }
-
-    document.addEventListener("DOMContentLoaded", toggleAdditionalFields);
-</script>
 {% endblock %}
