--- a/frontend/management/templates/insurance/edit_insurance.html
+++ b/frontend/management/templates/insurance/edit_insurance.html
@@ -26,7 +26,7 @@
                                     <div class = "row" style="justify-content: center">
                                         <div class="col-md-4">
                                             <select id="insuranceDropdown" name="insuranceDropdown" class="form-control">
-                                                <option value="" disabled {% if not insurance_details %}selected{% endif %}>Select ID</option>
+                                                <option value="" disabled {% if not insurance_details %}selected{% endif %}>Select Insurance Company ID</option>
                                                 {% for insurance in insurance_companies %}
                                                     <option value="{{ insurance.InsuranceComp_ID }}" {% if insurance_details and insurance.InsuranceComp_ID == insurance_details.InsuranceComp_ID %}selected{% endif %}>{{ insurance.InsuranceComp_ID }}</option>
                                                 {% endfor %}
