--- a/frontend/management/templates/patient/add_patient.html
+++ b/frontend/management/templates/patient/add_patient.html
@@ -8,7 +8,8 @@
             <div class="list-group">
                 <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action " id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action active-tab" id="addPatient">Add Patient</a>
-                <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action" id="makeAppointment">Create Appointment</a>
+                <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action" id="viewAppointments">All Appointments</a>
+                <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action " id="makeAppointment">Create Appointment</a>
                 <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action" id="updateAppointment">Update Appointment</a>
                 <a href="{% url 'daily_inv' %}" class="list-group-item list-group-item-action" id="invPatient">Invoices</a>
             </div>
