--- a/frontend/management/templates/patient/appointments.html
+++ b/frontend/management/templates/patient/appointments.html
@@ -6,45 +6,45 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action " id="viewPatients">All Patients</a>
+                <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action" id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action" id="addPatient">Add Patient</a>
-                <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action" id="viewAppointments">All Appointments</a>
+                <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action active-tab" id="viewAppointments">All Appointments</a>
                 <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action " id="makeAppointment">Create Appointment</a>
                 <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action" id="updateAppointment">Update Appointment</a>
-                <a href="{% url 'daily_inv' %}" class="list-group-item list-group-item-action active-tab" id="invPatient">Invoices</a>
+                <a href="{% url 'daily_inv' %}" class="list-group-item list-group-item-action" id="invPatient">Invoices</a>
             </div>
-        </div>        
+        </div>
         <div class="col-md-10">
-            <div class="table-content" id="viewInvoiceInsuranceComp_content">
-                <div class="table-content" id="viewInvoiceInsuranceComp_content">
-                    <div class="text-center mb-4">
-                    <h3>View Daily Invoices for Insurance Companies</h3>
-                    <p class="lead">with Patient Subtotals.</p>
+            <div class="table-content" id="viewApp_content">
+                <div class="text-center mb-4">
+                    <h3>Appointments Information</h3>
+                    <p class="lead">Explore the details of all Appointments scheduled:</p>
                 </div>
-                <!-- window.alert("{{ insurance_companies }}")-->
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Date</th>
-                                <th>Insurance</th>
                                 <th>Patient ID</th>
-                                <th>Patient</th>
-                                <th>Total Cost</th>
+                                <th>Patient Name</th>
+                                <th>Doctor Assigned</th>
+                                <th>Facility ID</th>
+                                <th>Date Time</th>
+                                <th>Cost</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for cost_comp in costs %}
+                            {% for patient in patients %}
                             <tr>
-                                <td>{{cost_comp.InvDate}}</td>
-                                <td>{{cost_comp.Name}}</td>
-                                <td>{{cost_comp.Patient_ID}}</td>
-                                <td>{{cost_comp.FirstName}}</td>
-                                <td>{{cost_comp.TotalCost}}</td>
+                                <td>{{ patient.Patient_ID }}</td>
+                                <td>{{ patient.Patient_Name }}</td>
+                                <td>{{ patient.Doctor_Name }}</td>
+                                <td>{{ patient.Facility_ID }}</td>
+                                <td>{{ patient.Appointment_Date_Time }}</td>
+                                <td>{{ patient.Appointment_Cost }}</td>
                             </tr>
                             {% empty %}
                             <tr>
-                                <td colspan="8">No Daily Invoices found.</td>
+                                <td colspan="9">No patients found.</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -52,26 +52,26 @@
                 </div>
                 <!-- Pagination -->
                 <ul class="pagination justify-content-center">
-                    {% if costs.has_previous %}
+                    {% if patients.has_previous %}
                         <li class="page-item">
                             <a class="page-link" href="?page=1">&laquo; First</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ costs.previous_page_number }}">Previous</a>
+                            <a class="page-link" href="?page={{ patients.previous_page_number }}">Previous</a>
                         </li>
                     {% endif %}
                     <li class="page-item disabled">
-                        <a class="page-link" href="#">Page {{ costs.number }} of {{ costs.paginator.num_pages }}</a>
+                        <a class="page-link" href="#">Page {{ patients.number }} of {{ patients.paginator.num_pages }}</a>
                     </li>
-                    {% if costs.has_next %}
+                    {% if patients.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ costs.next_page_number }}">Next</a>
+                            <a class="page-link" href="?page={{ patients.next_page_number }}">Next</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ costs.paginator.num_pages }}">Last &raquo;</a>
+                            <a class="page-link" href="?page={{ patients.paginator.num_pages }}">Last &raquo;</a>
                         </li>
                     {% endif %}
-                   </ul>
+                </ul>
             </div>
         </div>
     </div>
