--- a/frontend/management/templates/patient/update_appointment.html
+++ b/frontend/management/templates/patient/update_appointment.html
@@ -6,10 +6,11 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action active-tab" id="viewPatients">All Patients</a>
+                <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action " id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action" id="addPatient">Add Patient</a>
-                <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action" id="makeAppointment">Create Appointment</a>
-                <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action" id="updateAppointment">Update Appointment</a>
+                <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action" id="viewAppointments">All Appointments</a>
+                <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action " id="makeAppointment">Create Appointment</a>
+                <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action active-tab" id="updateAppointment">Update Appointment</a>
                 <a href="{% url 'daily_inv' %}" class="list-group-item list-group-item-action" id="invPatient">Invoices</a>
             </div>
         </div>
@@ -32,7 +33,7 @@
                                                     {% for patient in patients %}
                                                         <option value="{{ patient.Patient_ID }}">{{ patient.Patient_ID }}</option>
                                                     {% endfor %}
-                                                </select>
+                                                </select></div></div>
                                     <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="doctor_id">Doctor ID:</label>
@@ -56,7 +57,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row" style="justify-content: space-around;">
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="appointment_date">Appointment Date:</label>
@@ -70,11 +71,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <button type="submit" class="btn btn-primary">Find Appointment</button>
-                                        </div>
-                                    </div>
+                                     <center><button type="submit" class="btn btn-secondary">Find Appointment</button></center>
+                                     <br><br>
                                 </form>
                             </div>
                             {% if appointment %}
